# MemoryGame

./: Cargo.toml  README.md  index.html
src/: main.rs
ui/: appwindow.slint
